--- a/frontend/app.postcss
+++ b/frontend/app.postcss
@@ -29,7 +29,7 @@
 
   
 	.fancy-border {
-    @apply bg-gradient-to-br from-teal-400 via-cyan-400 to-emerald-400 font-semibold p-0.5 w-fit md:mx-0 rounded-full;
+    @apply bg-gradient-to-br from-fuchsia-500 via-teal-500 to-cyan-500 font-semibold p-0.5 w-fit md:mx-0 rounded-full;
 	}
 }
 
