fixed wallet button

--- a/frontend/app.postcss
+++ b/frontend/app.postcss
@@ -21,6 +21,7 @@
     align-items: center;
     border-radius: 40px;
     cursor: pointer;
+    height: 40px;
   }
   .connect-button:hover {
     transform:none;
