--- a/frontend/app.postcss
+++ b/frontend/app.postcss
@@ -5,16 +5,16 @@
 
 @layer base {
   body {
-    @apply bg-dark-m;
+    @apply bg-dark-900;
   }
 }
 
 @layer components {
   /* for custom css on thirdparty components */
-  .connect-button { /* from c2ic , could only work this way*/
+  .connect-button { /* copied & edited from c2ic module */
     font-size: 18px;
-    background: rgb(20,20,20,0.8); 
-    color: #f1f2f2;
+    background: rgb(20,20,20,0.7); 
+    color: white;
     border: none;
     padding: 5px 10px;
     display: flex;
@@ -24,14 +24,17 @@
     height: 40px;
   }
   .connect-button:hover {
-    transform:none;
-    background: rgb(40,40,40,0.4);
+    transform: none;
+    background: none; 
   }
 
   
 	.fancy-border {
-    @apply bg-gradient-to-br from-fuchsia-500 via-teal-500 to-cyan-500 font-semibold p-0.5 w-fit md:mx-0 rounded-full;
+    @apply bg-gradient-to-br from-cyan-200 via-teal-500 to-emerald-600 font-semibold p-0.5 w-fit md:mx-0 rounded-full;
 	}
+  .text-gradient {
+    @apply bg-gradient-to-br from-cyan-200 via-teal-400 to-emerald-600 bg-clip-text text-transparent;
+  }
 }
 
 @layer utilities {
