--- a/frontend/app.postcss
+++ b/frontend/app.postcss
@@ -30,7 +30,7 @@
 
   
 	.fancy-border {
-    @apply bg-gradient-to-br from-cyan-200 via-teal-500 to-emerald-600 font-semibold p-0.5 w-fit md:mx-0 rounded-full;
+    @apply bg-gradient-to-br from-cyan-200 via-teal-500 to-emerald-600 font-semibold p-0.5 h-fit w-fit md:mx-0 rounded-full;
 	}
   .text-gradient {
     @apply bg-gradient-to-br from-cyan-200 via-teal-400 to-emerald-600 bg-clip-text text-transparent;
