--- a/frontend/app.postcss
+++ b/frontend/app.postcss
@@ -28,12 +28,18 @@
     background: none; 
   }
 
+  .vote-button {
+    @apply hover:bg-dark-700/60 w-8 h-8 rounded-full p-1 hover:scale-[1.3]; 
+  }
   
 	.fancy-border {
     @apply bg-gradient-to-br from-cyan-200 via-teal-500 to-emerald-600 font-semibold p-0.5 h-fit w-fit md:mx-0 rounded-full;
 	}
   .text-gradient {
     @apply bg-gradient-to-br from-cyan-200 via-teal-400 to-emerald-600 bg-clip-text text-transparent;
+  }
+  .dark-gradient {
+    @apply bg-gradient-to-br from-cyan-200/10  to-dark-700/30;
   }
   .nav-link {
     @apply flex hover:bg-dark-700 rounded-lg p-1 gap-x-1 lg:p-2 lg:gap-1;
